added maze project

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               </div>
               <div class="mt-4 col-8">
                 <p class="lead h6">Part time web developer @ WWF (World Wide Fund For Nature)</p>
-                <p class="mb-0">Developed ecommerce <a href='https://shop.wwf.sg/'>website</a> using HTML and CSS to customize and add functionality to Shopify’s default theme.</p>
+                <p class="mb-0">Developed an ecommerce website using HTML and CSS to customize and add functionality to Shopify’s default theme.</p>
               </div>
             </div>
           </div>
@@ -136,25 +136,37 @@
         <div class="container-fluid padding">
           <div class="row padding">
             <div class="col-md-6 mx-auto mt-4">
-              <div class="card">
+              <div class="card h-100">
                 <img class="card-img-top" src="finance.png">
                 <div class="card-body">
                   <h4 class="card-title">CS50 Finance Web App</h4>
-                  <p class="card-text">Implemented C$50 Finance, a web app via which you can manage portfolios of stocks by querying IEX for stocks' prices.</p>
+                  <p class="card-text h-50">Implemented C$50 Finance, a web app via which you can manage portfolios of stocks by querying IEX for stocks' prices.</p>
                   <a href="https://github.com/me50/rupjaisinghani0904" class="btn more btn-outline-secondary">View code</a>
                 </div>
               </div>
             </div>
             <div class="col-md-6 mx-auto mt-4">
-              <div class="card">
-                <img class="card-img-top" src="coming-soon-neon-sign-coming-soon-badge-in-vector-21133321.jpg">
+              <div class="card h-100">
+                <img class="card-img-top" src="maze.png">
                 <div class="card-body">
-                  <h4 class="card-title">Coming Soon</h4>
-                  <p class="card-text">I will be continuing to build more projects and will post them here when ready.</p>
+                  <h4 class="card-title">Maze Generator/Solver</h4>
+                  <p class="card-text h-50">Developed a programme which implements Kruskal's Algorithm to generate a maze, and uses DFS or BFS to solve the maze.</p>
+                  <a href="https://github.com/me50/rupjaisinghani0904" class="btn more btn-outline-secondary">View code</a>
                 </div>
               </div>
             </div>
-
+            <div class="col-md-6 mx-auto mt-4">
+              <div class="card h-100">
+                <img class="card-img-top" src="maze.png">
+                <div class="card-body">
+                  <h4 class="card-title">Maze Generator/Solver</h4>
+                  <p class="card-text h-50">Developed a programme which implements Kruskal's Algorithm to generate a maze, and uses DFS or BFS to solve the maze.</p>
+                  <a href="https://github.com/me50/rupjaisinghani0904" class="btn more btn-outline-secondary">View code</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
       <section class="page-section pt-5 pb-5" id="contact">
         <div class="container-fluid padding">
