Added files for journal and battleship projects

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <img class="card-img-top" src="finance.png">
                 <div class="card-body">
                   <h4 class="card-title">CS50 Finance Web App</h4>
-                  <p class="card-text h-50">Implemented C$50 Finance, a web app via which you can manage portfolios of stocks by querying IEX for stocks' prices.</p>
+                  <p class="card-text h-50">Web app via which you can manage portfolios of stocks by querying IEX for stocks' prices.</p>
                   <a href="https://github.com/me50/rupjaisinghani0904" class="btn more btn-outline-secondary">View code</a>
                 </div>
               </div>
@@ -150,18 +150,30 @@
                 <img class="card-img-top" src="maze.png">
                 <div class="card-body">
                   <h4 class="card-title">Maze Generator/Solver</h4>
-                  <p class="card-text h-50">Developed a programme which implements Kruskal's Algorithm to generate a maze, and uses DFS or BFS to solve the maze.</p>
-                  <a href="https://github.com/me50/rupjaisinghani0904" class="btn more btn-outline-secondary">View code</a>
+                  <p class="card-text h-50">Programme which implements Kruskal's Algorithm to generate a maze. Maze can be solved using BFS, DFS, or manually by the user.</p>
+                  <a href="https://github.com/rupjaisinghani0904/kruskal-maze" class="btn more btn-outline-secondary">View code</a>
                 </div>
               </div>
             </div>
             <div class="col-md-6 mx-auto mt-4">
               <div class="card h-100">
-                <img class="card-img-top" src="maze.png">
+                <img class="card-img-top" src="battleship.png">
                 <div class="card-body">
-                  <h4 class="card-title">Maze Generator/Solver</h4>
-                  <p class="card-text h-50">Developed a programme which implements Kruskal's Algorithm to generate a maze, and uses DFS or BFS to solve the maze.</p>
-                  <a href="https://github.com/me50/rupjaisinghani0904" class="btn more btn-outline-secondary">View code</a>
+                  <h4 class="card-title">Battleship game</h4>
+                  <p class="card-text h-50">A modified version of the clasic Battleship game, which operates on the command line interface. Users can choose between playing single player, 
+                    or have the computer player to play another computer remotely over a network connection.</p>
+                  <a href="https://github.com/CS-3500-OOD/pa04-kevin-rup" class="btn more btn-outline-secondary">View code</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 mx-auto mt-4">
+              <div class="card h-100">
+                <img class="card-img-top" src="journal.png">
+                <div class="card-body">
+                  <h4 class="card-title">Bullet Journal</h4>
+                  <p class="card-text h-50"> Bullet Journaling Java application to keep track of individual weeks. Each day of the week holds onto events and tasks for that day. 
+                    Includes additional functionality as persistence, keyboard shortcuts, expandable task queue, mini viewer, etc.</p>
+                  <a href="https://github.com/CS-3500-OOD/pa05-pablokevinrup" class="btn more btn-outline-secondary">View code</a>
                 </div>
               </div>
             </div>
