--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <span>Email</span>
               </a>
-              <a class="flex-row align-items-center mx-auto button" href="https://drive.google.com/file/d/1cD3gWtNqD1j_Ic0uSYtxDHbfR_7lFnAX/view?usp=sharing" target="_blank">
+              <a class="flex-row align-items-center mx-auto button" href="https://drive.google.com/file/d/1O11vqJ_Bnhe3UPhpSt3zQecxDEKYQh5h/view?usp=sharing" target="_blank">
                 <div class="icon">
                   <i class="btn fa fa-file-text"></i>
                 </div>
@@ -133,15 +133,15 @@
           <hr style="width:35%; margin:auto;">
         </div>
 
-        <div class="container-fluid padding">
+        <div class="container-fluid padding col-md-9">
           <div class="row padding">
             <div class="col-md-6 mx-auto mt-4">
               <div class="card h-100">
                 <img class="card-img-top" src="finance.png">
                 <div class="card-body">
                   <h4 class="card-title">CS50 Finance Web App</h4>
-                  <p class="card-text h-50">Web app via which you can manage portfolios of stocks by querying IEX for stocks' prices.</p>
-                  <a href="https://github.com/me50/rupjaisinghani0904" class="btn more btn-outline-secondary">View code</a>
+                  <p class="card-text">Web app via which you can manage portfolios of stocks by querying IEX for stocks' prices.</p>
+                  <a href="https://github.com/rupjaisinghani0904/cs50-Finanance" target="_blank" class="btn more btn-outline-secondary stretched-link">View code</a>
                 </div>
               </div>
             </div>
@@ -150,8 +150,8 @@
                 <img class="card-img-top" src="maze.png">
                 <div class="card-body">
                   <h4 class="card-title">Maze Generator/Solver</h4>
-                  <p class="card-text h-50">Programme which implements Kruskal's Algorithm to generate a maze. Maze can be solved using BFS, DFS, or manually by the user.</p>
-                  <a href="https://github.com/rupjaisinghani0904/kruskal-maze" class="btn more btn-outline-secondary">View code</a>
+                  <p class="card-text">Programme which implements Kruskal's Algorithm to generate a maze. Maze can be solved using BFS, DFS, or manually by the user.</p>
+                  <a href="https://github.com/rupjaisinghani0904/kruskal-maze" target="_blank" class="btn more btn-outline-secondary stretched-link">View code</a>
                 </div>
               </div>
             </div>
@@ -160,9 +160,9 @@
                 <img class="card-img-top" src="battleship.png">
                 <div class="card-body">
                   <h4 class="card-title">Battleship game</h4>
-                  <p class="card-text h-50">A modified version of the clasic Battleship game, which operates on the command line interface. Users can choose between playing single player, 
+                  <p class="card-text">A modified version of the clasic Battleship game, which operates on the command line interface. Users can choose between playing single player, 
                     or have the computer player to play another computer remotely over a network connection.</p>
-                  <a href="https://github.com/CS-3500-OOD/pa04-kevin-rup" class="btn more btn-outline-secondary">View code</a>
+                  <a href="https://github.com/rupjaisinghani0904/battleShip" target="_blank" class="btn more btn-outline-secondary stretched-link">View code</a>
                 </div>
               </div>
             </div>
@@ -171,9 +171,9 @@
                 <img class="card-img-top" src="journal.png">
                 <div class="card-body">
                   <h4 class="card-title">Bullet Journal</h4>
-                  <p class="card-text h-50"> Bullet Journaling Java application to keep track of individual weeks. Each day of the week holds onto events and tasks for that day. 
+                  <p class="card-text"> Bullet Journaling Java application to keep track of individual weeks. Each day of the week holds onto events and tasks for that day. 
                     Includes additional functionality as persistence, keyboard shortcuts, expandable task queue, mini viewer, etc.</p>
-                  <a href="https://github.com/CS-3500-OOD/pa05-pablokevinrup" class="btn more btn-outline-secondary">View code</a>
+                  <a href="https://github.com/rupjaisinghani0904/bullet-journal" target="_blank" class="btn more btn-outline-secondary stretched-link">View code</a>
                 </div>
               </div>
             </div>
