--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                 </div>
                 <span>Email</span>
               </a>
-              <a class="flex-row align-items-center mx-auto button" href="https://drive.google.com/file/d/1O11vqJ_Bnhe3UPhpSt3zQecxDEKYQh5h/view?usp=sharing" target="_blank">
+              <a class="flex-row align-items-center mx-auto button" href="https://drive.google.com/file/d/1EvZwOXrAG4tYXeWZzrNRG_wgai_UIVnR/view?usp=sharing" target="_blank">
                 <div class="icon">
                   <i class="btn fa fa-file-text"></i>
                 </div>
-                <span>Résumé</span>
+                <span>Resume</span>
               </a>
             </div>
           </div>
